# fastapi-kafka

./: .env.example  Dockerfile.consumer  Dockerfile.producer  LICENSE  README.md  create_topic.sh  create_topics.sh  docker-compose.yml
consumer/: .env-example  Dockerfile  pyproject.toml
consumer/scripts/: run._gunicorn.sh  run.sh  run_gunicorn.sh  run_multi_workers.sh  run_single_worker.sh
consumer/src/: config.py  database.py  kafka.py  logger.py  main.py  model.py
producer/: Dockerfile  pyproject.toml  run.sh
producer/src/: config.py  main.py  main_async.py  main_multiprocessing.py  main_multithread.py
