[tool.poetry]
name = "fastapi-consumer"
version = "0.1.0"
description = ""
authors = ["Vladimir Mitrovic <vladimir.mitrovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
confluent-kafka = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydantic_settings]
package-mode = false
